fix sidebar menu alignment

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -4,6 +4,7 @@
   @include until($desktop) {
     background-color: $primary-invert;
     min-height: 3rem;
+    color: $primary;
     & > .container,
     & .navbar-brand {
       min-height: 3rem;
@@ -35,15 +36,20 @@
     background-color: $primary-invert;
     color: $primary;
   }
-
-  .sidebar-list {
+  .modal .container {
+    width: 100%;
     display: flex;
-    flex-direction: column;
-
-    @include from($desktop) {
-      margin-right: 7.5rem;
+    align-items: center;
+    justify-content: flex-end;
+    @include until($desktop) {
+      .sidebar-list {
+        margin-right: 0rem;
+      }
+      justify-content: center;
     }
-
+  }
+  .sidebar-list {
+    margin-right: 1rem;
     a.navbar-item {
       color: $primary;
       background-color: transparent;
